--- a/SneakerWatcher/SneakerWatcher/SneakerWatcher.csproj
+++ b/SneakerWatcher/SneakerWatcher/SneakerWatcher.csproj
@@ -10,5 +10,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 
 </Project>
