undate framework .net 5.0

--- a/SneakerWatcher/SneakerWatcher.csproj
+++ b/SneakerWatcher/SneakerWatcher.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>25d1b194-db24-4f9b-ab3a-47baa47544a0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
